errors.txt
   Compiling all4laser v0.1.0 (/home/animehq/All4Laser)
warning: unused import: `DrawingState`
 --> src/preview/renderer.rs:4:50
  |
4 | use crate::ui::drawing::{ShapeParams, ShapeKind, DrawingState};
  |                                                  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Color32`
 --> src/ui/gcode_editor.rs:2:22
  |
2 | use egui::{RichText, Color32};
  |                      ^^^^^^^

warning: unused import: `Ui`
 --> src/ui/cut_settings.rs:1:12
  |
1 | use egui::{Ui, RichText};
  |            ^^

warning: unused import: `RichText`
 --> src/ui/cut_list.rs:1:16
  |
1 | use egui::{Ui, RichText, Color32, Grid, Sense, StrokeKind};
  |                ^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src/ui/text.rs:6:5
  |
6 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `Ui`
 --> src/ui/circular_array.rs:2:12
  |
2 | use egui::{Ui, RichText};
  |            ^^

warning: unused import: `ShapeParams`
 --> src/ui/circular_array.rs:4:26
  |
4 | use crate::ui::drawing::{ShapeParams, DrawingState};
  |                          ^^^^^^^^^^^

warning: unused import: `Ui`
 --> src/ui/offset.rs:1:12
  |
1 | use egui::{Ui, RichText};
  |            ^^

warning: unused import: `Ui`
 --> src/ui/boolean_ops.rs:1:12
  |
1 | use egui::{Ui, RichText};
  |            ^^

warning: unused import: `Polygon`
 --> src/ui/boolean_ops.rs:4:11
  |
4 | use geo::{Polygon, MultiPolygon, BooleanOps};
  |           ^^^^^^^

error[E0689]: can't call method `max` on ambiguous numeric type `{float}`
   --> src/preview/renderer.rs:599:51
    |
599 | ...                   max_x = max_x.max(p.0);
    |                                     ^^^
    |
help: you must specify a type for this binding, like `f32`
    |
597 |                                 let mut max_x: f32 = 0.0; let mut max_y = 0.0;
    |                                              +++++

error[E0689]: can't call method `max` on ambiguous numeric type `{float}`
   --> src/preview/renderer.rs:600:51
    |
600 | ...                   max_y = max_y.max(p.1);
    |                                     ^^^
    |
help: you must specify a type for this binding, like `f32`
    |
597 |                                 let mut max_x = 0.0; let mut max_y: f32 = 0.0;
    |                                                                   +++++

error[E0689]: can't call method `max` on ambiguous numeric type `{float}`
   --> src/preview/renderer.rs:680:35
    |
680 |                     max_x = max_x.max(p.0);
    |                                   ^^^
    |
help: you must specify a type for this binding, like `f32`
    |
677 |                 let mut max_x: f32 = 0.0;
    |                              +++++

error[E0689]: can't call method `max` on ambiguous numeric type `{float}`
   --> src/preview/renderer.rs:681:35
    |
681 |                     max_y = max_y.max(p.1);
    |                                   ^^^
    |
help: you must specify a type for this binding, like `f32`
    |
678 |                 let mut max_y: f32 = 0.0;
    |                              +++++

warning: use of deprecated method `egui::DragValue::<'a>::clamp_range`: Use `range` instead
   --> src/ui/image_dialog.rs:202:103
    |
202 | ...                   ui.add(egui::DragValue::new(&mut layer.speed).speed(10.0).clamp_range(100.0..=10000.0));
    |                                                                                 ^^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `egui::DragValue::<'a>::clamp_range`: Use `range` instead
   --> src/ui/image_dialog.rs:205:102
    |
205 | ...                   ui.add(egui::DragValue::new(&mut layer.power).speed(1.0).clamp_range(0.0..=1000.0));
    |                                                                                ^^^^^^^^^^^

warning: use of deprecated associated function `egui::ComboBox::from_id_source`: Renamed id_salt
   --> src/ui/materials.rs:125:25
    |
125 |         egui::ComboBox::from_id_source("material_combo")
    |                         ^^^^^^^^^^^^^^

warning: use of deprecated method `egui::ScrollArea::id_source`: Renamed id_salt
  --> src/ui/layers.rs:16:38
   |
16 |         egui::ScrollArea::vertical().id_source("layers_scroll").max_height(200.0).show(ui, |ui| {
   |                                      ^^^^^^^^^

warning: use of deprecated method `egui::ScrollArea::id_source`: Renamed id_salt
  --> src/ui/cut_palette.rs:16:40
   |
16 |         egui::ScrollArea::horizontal().id_source("palette_scroll").show(ui, |ui| {
   |                                        ^^^^^^^^^

warning: use of deprecated associated function `egui::ComboBox::from_id_source`: Renamed id_salt
  --> src/ui/cut_settings.rs:58:37
   |
58 |                     egui::ComboBox::from_id_source("mode_combo")
   |                                     ^^^^^^^^^^^^^^

warning: use of deprecated associated function `egui::ComboBox::from_id_source`: Renamed id_salt
   --> src/ui/text.rs:174:33
    |
174 |                 egui::ComboBox::from_id_source("font_combo")
    |                                 ^^^^^^^^^^^^^^

warning: variable `laser_on` is assigned to, but never used
  --> src/gcode/optimizer.rs:30:9
   |
30 |     let mut laser_on = false;
   |         ^^^^^^^^^^^^
   |
   = note: consider using `_laser_on` instead
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `laser_on` is never read
  --> src/gcode/optimizer.rs:52:17
   |
52 |                 laser_on = false;
   |                 ^^^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `laser_on` is never read
  --> src/gcode/optimizer.rs:36:17
   |
36 |                 laser_on = true;
   |                 ^^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?

warning: variable does not need to be mutable
   --> src/preview/renderer.rs:308:13
    |
308 |         let mut stroke_color = if is_selected {
    |             ----^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/ui/image_dialog.rs:178:33
    |
178 | ...                   let mut any_changed = false;
    |                           ----^^^^^^^^^^^
    |                           |
    |                           help: remove this `mut`

warning: unused variable: `any_changed`
   --> src/ui/image_dialog.rs:178:33
    |
178 | ...                   let mut any_changed = false;
    |                           ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_any_changed`

warning: unused variable: `i`
   --> src/ui/image_dialog.rs:179:34
    |
179 | ...                   for (i, layer) in state.svg_params.layers.iter_mut().enumerate() {
    |                            ^ help: if this is intentional, prefix it with an underscore: `_i`

warning: unused variable: `sx`
  --> src/ui/alignment.rs:86:18
   |
86 |             let (sx, sy, sw, sh) = get_shape_rect(shape);
   |                  ^^ help: if this is intentional, prefix it with an underscore: `_sx`

warning: unused variable: `sy`
  --> src/ui/alignment.rs:86:22
   |
86 |             let (sx, sy, sw, sh) = get_shape_rect(shape);
   |                      ^^ help: if this is intentional, prefix it with an underscore: `_sy`

For more information about this error, try `rustc --explain E0689`.
warning: `all4laser` (bin "all4laser") generated 26 warnings
error: could not compile `all4laser` (bin "all4laser") due to 4 previous errors; 26 warnings emitted
